spacing fixes

--- a/style.css
+++ b/style.css
@@ -12,10 +12,7 @@ p{
     font-size: 2em;
 }
 
-.Wine {
-    font-size: 1em;
+.titles {
+    margin:5px;
 }
 
-.beerz {
-    padding: 10px;
-}
